--- a/web/src/main/webapp/templates/Network.html
+++ b/web/src/main/webapp/templates/Network.html
@@ -18,6 +18,11 @@
 <div class="row-fluid">
     <div class="span12">
         <div class="content">
+            <div class="control-group">
+               <label for="name" class="control-label">Guest Network</label>
+               <div class="controls">
+                   <input type="checkbox" id="guestEnabled" name="guestEnabled" ng-model="network.is_guest" ng-value="true"/>
+               </div>
             <div class="container-fluid"> 
                 <div class="row-fluid" ng-show="activeItem == 'Configuration'">
                     <div class="span12">
