Alter html to show guest

--- a/web/src/main/webapp/templates/SiteSettings.html
+++ b/web/src/main/webapp/templates/SiteSettings.html
@@ -12,7 +12,7 @@
     <div class="span12">
         <ul class="content-sidebar">
             <li><a ng-click="activeItem = 'Details'" ng-class="activeItem == 'Details' ? 'active' : ''"><i class="icon-asterisk"></i>Site Details</a></li>
-            <li><a ng-click="activeItem = 'Limits'" ng-class="activeItem == 'Limits' ? 'active' : ''"><i class="icon-asterisk"></i>Guest Network Settings</a></li>
+            <li><a ng-click="activeItem = 'Guest'" ng-class="activeItem == 'Guest' ? 'active' : ''"><i class="icon-asterisk"></i>Guest Network Settings</a></li>
             <li><a ng-click="activeItem = 'Access'" ng-class="activeItem == 'Access' ? 'active' : ''"><i class="icon-asterisk"></i>Access Control</a></li>
             <li><a ng-click="activeItem = 'Limits'" ng-class="activeItem == 'Limits' ? 'active' : ''"><i class="icon-asterisk"></i>Traffic Limits</a></li>
         </ul>
