--- a/web/src/main/webapp/templates/SiteSettings.html
+++ b/web/src/main/webapp/templates/SiteSettings.html
@@ -94,7 +94,7 @@
                                         </div>
                                     </div>
                                     
-                                    <div class="field-section" ng-show="activeSubItem=='Guest'">
+                                    <div class="field-section" ng-show="activeItem=='Guest'">
                                             <div class="control-group">
                                                 <div class="control-label">
                                                     Authentication
