--- a/web/src/main/webapp/templates/SiteSettings.html
+++ b/web/src/main/webapp/templates/SiteSettings.html
@@ -102,7 +102,7 @@
                                                 </div>
                                                 <div class="controls">
                                                     <label class="radio">
-                                                        <input type="radio" ng-model=settings.auth value="none">No authentication
+                                                        <input type="radio" ng-model="settings.auth" value="none">No authentication
                                                     </label>
                                                     <label class="radio">
                                                         <input type="radio" ng-model="settings.auth" value="password">Simple Password
