--- a/web/src/main/webapp/templates/Network.html
+++ b/web/src/main/webapp/templates/Network.html
@@ -21,7 +21,7 @@
             <div class="control-group">
               <div class="controls">
                 <label class="checkbox" style="display: inline-block;"><input type="checkbox" ng-model="network.is_guest">Guest Network</label>
-                <div ng-hide="!network.is_guest">Guest Settings for all networks are in the Site Settings tab <a href="#/settings">here</a></div>
+                <div ng-hide="!network.is_guest">Guest Settings for all networks are in <a href="#/settings">Site Settings</a></div>
               </div>
              </div>
             <div class="container-fluid"> 
