Removed guest stuff from network page

--- a/web/src/main/webapp/templates/SiteSettings.html
+++ b/web/src/main/webapp/templates/SiteSettings.html
@@ -28,7 +28,7 @@
                             </div>
                             <div ng-show="activeItem=='Guest'">
                                 <h2>Guest Network Settings</h2>
-                                <h3>These settings are applied across all guest networks</h3>
+                                <p>These settings are applied across all guest networks</p>
                             </div>
                             <div ng-show="activeItem=='Access'">
                                 <h2>Access Control</h2>
