--- a/web/src/main/webapp/css/jive.css
+++ b/web/src/main/webapp/css/jive.css
@@ -4212,7 +4212,7 @@ button.btn.btn-mini, input[type="submit"].btn.btn-mini {
 	position: relative;
 	left: 0;
 	display: block;
-	float: left;
+	/* float: left; */
 	margin: 0 10px 0 0
 }
 .navbar .nav.pull-right {
