Changed to not issue sudo command

--- a/web/src/main/webapp/templates/SiteSettings.html
+++ b/web/src/main/webapp/templates/SiteSettings.html
@@ -28,7 +28,7 @@
                             </div>
                             <div ng-show="activeItem=='Guest'">
                                 <h2>Guest Network Settings</h2>
-                                <p>These settings are applied across all guest networks</p>
+                                <p>These settings are applied across all guest networks. Changes to this page will cause the Access Points to provision. See status of Access Points <a href="#/devices">here</a></p>
                             </div>
                             <div ng-show="activeItem=='Access'">
                                 <h2>Access Control</h2>
