--- a/web/src/main/webapp/templates/Network.html
+++ b/web/src/main/webapp/templates/Network.html
@@ -10,6 +10,7 @@
             <li><a href="#/networks">Wireless Networks</a></li>
             <li><a style="cursor:pointer;">{{isNew ? "Create New Network" : ("Manage " + network.name) }}</a></li>
         </ul>
+        <h3>Changes to this page will cause each Access Point to provision. See status of Access Points on <a href="#/devices">here</a></h3>
     </div>
 </div>
 <div class="page-actions">
