--- a/web/src/main/webapp/templates/Network.html
+++ b/web/src/main/webapp/templates/Network.html
@@ -18,7 +18,7 @@
 <div class="row-fluid">
     <div class="span12">
         <div class="content">
-                  <div>Changes to this page will cause each Access Point to provision. See status of Access Points on <a href="#/devices">here</a></div>
+                  <div style="padding-bottom: 20px;">Changes to this page will cause each Access Point to provision. See status of Access Points on <a href="#/devices">here</a></div>
             <div class="control-group">
               <div class="controls">
                 <label class="checkbox" style="display: inline-block;"><input type="checkbox" ng-model="network.is_guest">Guest Network</label>
