--- a/web/src/main/webapp/css/jive.css
+++ b/web/src/main/webapp/css/jive.css
@@ -3777,7 +3777,7 @@ button.btn.btn-mini, input[type="submit"].btn.btn-mini {
 .nav-list>.active>a, .nav-list>.active>a:hover, .nav-list>.active>a:focus {
 	color: #fff;
 	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
-	background-color: #08c
+	background-color: #006dcc
 }
 .nav-list [class^="icon-"], .nav-list [class*=" icon-"] {
 	margin-right: 2px
