Cleaned up ui and site to location

--- a/web/src/main/webapp/templates/Network.html
+++ b/web/src/main/webapp/templates/Network.html
@@ -22,7 +22,7 @@
             <div class="control-group">
                 <div class="controls">
                     <label class="checkbox" style="display: inline-block;"><input type="checkbox" ng-model="network.is_guest">Guest Network</label>
-                    <div ng-hide="!network.is_guest">Guest Settings for all networks are in <a href="#/settings">Site Settings</a></div>
+                    <div ng-hide="!network.is_guest">Guest Settings for all networks are in <a href="#/settings">Location Settings</a></div>
                 </div>
             </div>
             <div class="container-fluid">
