--- a/web/src/main/webapp/templates/NewSite.html
+++ b/web/src/main/webapp/templates/NewSite.html
@@ -37,12 +37,12 @@
                                         <div ng-show="form.alert_email.$error.required" class="tip help">An email is required</div>
                                     </div>
                                 </div>
-                                <div class="control-group">
+                               <!--  <div class="control-group">
                                     <label for="address" class="control-label">Account Number</label>
                                     <div class="controls">
                                         <input type="text" id="account" name="account" placeholder="Provide an account number..." ng-model="site.account">
                                     </div>
-                                </div>
+                                </div> -->
                                 <div class="control-group">
                                     <label for="address" class="control-label">Address</label>
                                     <div class="controls">
